arrumando produtos adicionados no carrinho

--- a/produto1.html
+++ b/produto1.html
@@ -50,7 +50,7 @@
                   </div>
                   <div class="right" >
                     <h2>Kigurumi Pokemon</h2>
-                    <h4>Preço:<div class="price">$50</div><h4>
+                    <h5><Preço:<div class="price">R$110,00</div><h5>
                     <button class="btn"><a href="" class="add-cart cart1">Adicionar ao carrinho</a></button>
                     <h4>Descrição:</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero minima delectus nulla voluptates nesciunt
