--- a/produto2.html
+++ b/produto2.html
@@ -51,8 +51,8 @@
                   <div class="right" >
                     <h2>Kigurumi Panda</h2>
                     <h4>Preço:<div class="price">R$100,00</div><h4>
-                    <button class="btn"><a href="" class="add-cart cart1">Add To Cart</a></button>
-                    <h4>Product Detail</h4>
+                    <button class="btn"><a href="" class="add-cart cart1">Adicionar ao carrinho</a></button>
+                    <h4>Descrição:</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero minima delectus nulla voluptates nesciunt
                       quidem laudantium, quisquam voluptas facilis dicta in explicabo, laboriosam ipsam suscipit!</p>
                 </div>
