--- a/produto4.html
+++ b/produto4.html
@@ -52,7 +52,7 @@
                     <h2>Kigurumi Jigglypuff</h2>
                     <h4>Preço:<div class="price">R$250,00</div><h4>
                     <button class="btn"><a href="" class="add-cart cart1">Adicionar ao carrinho</a></button>
-                    <h4>Product Detail</h4>
+                    <h4>Descrição</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero minima delectus nulla voluptates nesciunt
                       quidem laudantium, quisquam voluptas facilis dicta in explicabo, laboriosam ipsam suscipit!</p>
                 </div>
