--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             />
             <!--bootstrap-->
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+            <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+            <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
             <!--google fonts-->
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -36,7 +39,7 @@
                     <a href="#" class="nav-link"><img src="./assets/logo.svg" style="width:80px"></a>
                 </div>
 
-                <div class="cart"style="color: palevioletred; display:flex">
+                <div class="cart"style="color: palevioletred; display:flex" id="cliente">
                   <a href="/site/cart.html" class="nav-link"><i class='bx bx-shopping-bag bx-lg'></i></box-icon></a>
                   <span>0</span>
                 </div>
@@ -44,6 +47,7 @@
             </div>
           </div>
         </header>
+          
           <section class="banner1" style='background-color:#a5cadd;'>
           <div class="div-hero">
             <div class="hero-content">
@@ -81,7 +85,7 @@
 
         <div class="product">
           <div class="product-header">
-            <img src="./assets/kigurumis/adultos/k-a-1.jpg" alt="">
+            <img src="./assets/kigurumis/adultos/kigurumi-1.jpg" alt="">
             <ul class="icons">
               <a class="add-cart cart1" href="#produto1">
                 <span><i class="bx bx-shopping-bag"></i></span>
@@ -103,7 +107,7 @@
 
         <div class="product">
           <div class="product-header">
-            <img src="./assets/kigurumis/adultos/k-a-2.jpg" alt="">
+            <img src="./assets/kigurumis/adultos/kigurumi-2.jpg" alt="">
             <ul class="icons">
               <a class="add-cart cart2" href="#produto1">
                 <span><i class="bx bx-shopping-bag"></i></span>
@@ -126,7 +130,7 @@
 
         <div class="product">
           <div class="product-header">
-            <img src="./assets/kigurumis/adultos/k-a-3.jpg" alt="">
+            <img src="./assets/kigurumis/adultos/kigurumi-3.jpg" alt="">
             <ul class="icons">
               <a class="add-cart cart3" href="#produto1">
                 <span><i class="bx bx-shopping-bag"></i></span>
@@ -149,7 +153,7 @@
 
         <div class="product">
           <div class="product-header">
-            <img src="./assets/kigurumis/adultos/k-a-5.jpg" alt="">
+            <img src="./assets/kigurumis/adultos/kigurumi-4.jpg" alt="">
 
             <ul class="icons">
               <a class="add-cart cart4" href="#produto1">
@@ -180,7 +184,7 @@
           <div class="product-center">
             <div class="product">
               <div class="product-header">
-                <img src="./assets/kigurumis/criança/k-c-1.jpg" alt="">
+                <img src="./assets/kigurumis/criança/kigurumi-5.jpg" alt="">
                 <ul class="icons"> 
                   <a class="add-cart cart5" href="#produto2">
                     <span><i class="bx bx-shopping-bag"></i></span>
@@ -203,7 +207,7 @@
             </div>
             <div class="product">
               <div class="product-header">
-                <img src="./assets/kigurumis/criança/k-c-2.jpg" alt="">
+                <img src="./assets/kigurumis/criança/kigurumi-6.jpg" alt="">
                 <ul class="icons">
                   <a class="add-cart cart6" href="#produto2">
                     <span><i class="bx bx-shopping-bag"></i></span>
@@ -224,7 +228,7 @@
             </div>
             <div class="product">
               <div class="product-header">
-                <img src="./assets/kigurumis/criança/k-c-4.jpg" alt="">
+                <img src="./assets/kigurumis/criança/kigurumi-7.jpg" alt="">
                 <ul class="icons">
                   <a class="add-cart cart7" href="#produto2">
                     <span><i class="bx bx-shopping-bag"></i></span>
@@ -245,7 +249,7 @@
             </div>
             <div class="product">
               <div class="product-header">
-                <img src="./assets/kigurumis/criança/k-c-5.jpg" alt="">
+                <img src="./assets/kigurumis/criança/kigurumi-8.jpg" alt="">
                 <ul class="icons">
                   <a class="add-cart cart8" href="#produto2">
                   <span><i class="bx bx-shopping-bag"></i></span>
