--- a/produto2.html
+++ b/produto2.html
@@ -45,16 +45,16 @@
                 <div class="details container-md">
                   <div class="left" style="margin-top: 20px;">
                     <div class="main">
-                      <img src="./assets/kigurumis/adultos/k-a-2.jpg" alt="">
+                      <img src="./assets/kigurumis/adultos/kigurumi-2.jpg" alt="">
                     </div>
                   </div>
                   <div class="right" >
                     <h2>Kigurumi Panda</h2>
                     <h4>Preço:<div class="price">R$100,00</div><h4>
+                    <div class="add-cart"> </div>
                     <button class="btn"><a href="" class="add-cart cart1">Adicionar ao carrinho</a></button>
-                    <h4>Descrição:</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero minima delectus nulla voluptates nesciunt
-                      quidem laudantium, quisquam voluptas facilis dicta in explicabo, laboriosam ipsam suscipit!</p>
+                    <h4>Detalhes</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero minima delectus nulla voluptates nesciunt!</p>
                 </div>
                 </div>
               </section>
