--- a/produto4.html
+++ b/produto4.html
@@ -45,12 +45,15 @@
                 <div class="details container-md">
                   <div class="left" style="margin-top: 20px;">
                     <div class="main">
-                      <img src="./assets/kigurumis/adultos/k-a-5.jpg" alt="">
+                      <img src="./assets/kigurumis/adultos/kigurumi-4.jpg" alt="">
                     </div>
                   </div>
                   <div class="right" >
                     <h2>Kigurumi Jigglypuff</h2>
                     <h4>Preço:<div class="price">R$250,00</div><h4>
+                        <div class="add-cart"> </div>
+                        <div class="add-cart"> </div>
+                        <div class="add-cart"> </div>
                     <button class="btn"><a href="" class="add-cart cart1">Adicionar ao carrinho</a></button>
                     <h4>Descrição</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero minima delectus nulla voluptates nesciunt
@@ -74,7 +77,7 @@
                   <a href="https://github.com/hana-bananaa" target="_blank"><img src="/site/assets/icons/github-logo-face.png" alt="git"style="width:24px;  margin:10px;"></a>
                   <a href="https://www.linkedin.com/in/debora-barto/" target="_blank" ><img src="/site/assets/icons/linkedin.png" alt="linkedin" style="width:24px;  margin:10px;"></a> 
                   <a href="https://www.instagram.com/debra_barto/" target="_blank" ><img src="/site/assets/icons/instagram.png" alt="insta"style="width:24px; margin:10px;"></a>
-                  <h4 style=" margin:20px ">Site By Débora Bartosiaki </h4>
+                  <h5 style=" margin:20px ">Site By Débora Bartosiaki </h5>
               </div>
             </div>
           </div>
