--- a/produto8.html
+++ b/produto8.html
@@ -45,12 +45,19 @@
                 <div class="details container-md">
                   <div class="left" style="margin-top: 20px;">
                     <div class="main">
-                      <img src="./assets/kigurumis/criança/k-c-5.jpg" alt="">
+                      <img src="./assets/kigurumis/criança/kigurumi-8.jpg" alt="">
                     </div>
                   </div>
                   <div class="right" >
                     <h2>Kigurumi Jigglypuff kid</h2>
                     <h4>Preço:<div class="price">R$100,00</div><h4>
+                        <div class="add-cart"> </div>
+                        <div class="add-cart"> </div>
+                        <div class="add-cart"> </div>
+                        <div class="add-cart"> </div>
+                        <div class="add-cart"> </div>
+                        <div class="add-cart"> </div>
+                        <div class="add-cart"> </div>
                     <button class="btn"><a href="" class="add-cart cart1">Adicionar ao carrinho</a></button>
                     <h4>Descrição:</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero minima delectus nulla voluptates nesciunt
