reta final, arrumando rotas

--- a/src/pages/produto5.html
+++ b/src/pages/produto5.html
@@ -68,24 +68,24 @@
           <!--custon script-->
           <script src="/site/JS/index.js"></script>
             <!--footer-->
-          <footer id="home" class="footer1">
-            <div class ="nav-container">
-              <div class="logo">
-                    <a href="#" class="nav-link"><img src="./assets/logo.svg" style="width:62px;"></a>
+            <footer id="home" class="footer1">
+              <div class ="nav-container">
+                <div class="logo">
+                      <a href="#" class="nav-link"><img src="/src/assets/logo.svg" style="width:62px;"></a>
+                  </div>
+        
+                  <div class="footer-dis" style="display:flex; justify-content:center; align-items: center;">
+                    <a href="https://github.com/hana-bananaa" target="_blank"><img src="/src/assets/icons/github-logo-face.png" alt="git"style="width:24px;  margin:10px;"></a>
+                    <a href="https://www.linkedin.com/in/debora-barto/" target="_blank" ><img src="/src/assets/icons/linkedin.png" alt="linkedin" style="width:24px;  margin:10px;"></a> 
+                    <a href="https://www.instagram.com/debra_barto/" target="_blank" ><img src="/src/assets/icons/instagram.png" alt="insta"style="width:24px; margin:10px;"></a>
+                    <h5 style=" margin:20px ">Site By Débora Bartosiaki </h5>
                 </div>
-      
-                <div class="footer-dis" style="display:flex; justify-content:center; align-items: center;">
-                  <a href="https://github.com/hana-bananaa" target="_blank"><img src="/site/assets/icons/github-logo-face.png" alt="git"style="width:24px;  margin:10px;"></a>
-                  <a href="https://www.linkedin.com/in/debora-barto/" target="_blank" ><img src="/site/assets/icons/linkedin.png" alt="linkedin" style="width:24px;  margin:10px;"></a> 
-                  <a href="https://www.instagram.com/debra_barto/" target="_blank" ><img src="/site/assets/icons/instagram.png" alt="insta"style="width:24px; margin:10px;"></a>
-                  <h5 style=" margin:20px ">Site By Débora Bartosiaki </h5>
               </div>
             </div>
-          </div>
-        </footer>
+          </footer>
                 <!--gsap-->
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
                 <!--custon script-->
-                <script src="/site/JS/index.js"></script>
+                <script src="/JS/index.js"></script>
         </body>
     </html>
