--- a/src/pages/produto6.html
+++ b/src/pages/produto6.html
@@ -41,24 +41,22 @@
                 </div>
               </div>
             </header>
-            <section class="section product-detail"style="width:100vw; height:100vh">
+            <section class="section product-detail">
                 <div class="details container-md">
                   <div class="left" style="margin-top: 20px;">
                     <div class="main">
-                      <img src="./assets/kigurumis/criança/kigurumi-8.jpg" alt="">
+                      <img src="/site/assets/kigurumis/criança/kigurumi-6.jpg" alt="">
                     </div>
                   </div>
                   <div class="right" >
-                    <h2>Kigurumi Jigglypuff kid</h2>
+                    <h2>Kigurumi Panda Kid</h2>
                     <h4>Preço:<div class="price">R$100,00</div><h4>
                         <div class="add-cart"> </div>
                         <div class="add-cart"> </div>
                         <div class="add-cart"> </div>
                         <div class="add-cart"> </div>
                         <div class="add-cart"> </div>
-                        <div class="add-cart"> </div>
-                        <div class="add-cart"> </div>
-                    <button class="btn"><a href="" class="add-cart cart1">Adicionar ao carrinho</a></button>
+                    <button class="btn"><a href="" class="add-cart cart1">Adicionar ao carrinho/a></button></a>
                     <h4>Descrição:</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero minima delectus nulla voluptates nesciunt
                       quidem laudantium, quisquam voluptas facilis dicta in explicabo, laboriosam ipsam suscipit!</p>
@@ -71,24 +69,24 @@
           <!--custon script-->
           <script src="/site/JS/index.js"></script>
             <!--footer-->
-          <footer id="home" class="footer1">
-            <div class ="nav-container">
-              <div class="logo">
-                    <a href="#" class="nav-link"><img src="./assets/logo.svg" style="width:62px;"></a>
+            <footer id="home" class="footer1">
+              <div class ="nav-container">
+                <div class="logo">
+                      <a href="#" class="nav-link"><img src="/src/assets/logo.svg" style="width:62px;"></a>
+                  </div>
+        
+                  <div class="footer-dis" style="display:flex; justify-content:center; align-items: center;">
+                    <a href="https://github.com/hana-bananaa" target="_blank"><img src="/src/assets/icons/github-logo-face.png" alt="git"style="width:24px;  margin:10px;"></a>
+                    <a href="https://www.linkedin.com/in/debora-barto/" target="_blank" ><img src="/src/assets/icons/linkedin.png" alt="linkedin" style="width:24px;  margin:10px;"></a> 
+                    <a href="https://www.instagram.com/debra_barto/" target="_blank" ><img src="/src/assets/icons/instagram.png" alt="insta"style="width:24px; margin:10px;"></a>
+                    <h5 style=" margin:20px ">Site By Débora Bartosiaki </h5>
                 </div>
-      
-                <div class="footer-dis" style="display:flex; justify-content:center; align-items:center; margin:auto">
-                  <a href="https://github.com/hana-bananaa" target="_blank"><img src="/site/assets/icons/github-logo-face.png" alt="git"style="width:24px;  margin:10px;"></a>
-                  <a href="https://www.linkedin.com/in/debora-barto/" target="_blank" ><img src="/site/assets/icons/linkedin.png" alt="linkedin" style="width:24px;  margin:10px;"></a> 
-                  <a href="https://www.instagram.com/debra_barto/" target="_blank" ><img src="/site/assets/icons/instagram.png" alt="insta"style="width:24px; margin:10px;"></a>
-                  <h5 style=" margin:20px ">Site By Débora Bartosiaki </h5>
               </div>
             </div>
-          </div>
-        </footer>
+          </footer>
                 <!--gsap-->
                 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
                 <!--custon script-->
-                <script src="/site/JS/index.js"></script>
+                <script src="/JS/index.js"></script>
         </body>
     </html>
