--- a/src/pages/cart.html
+++ b/src/pages/cart.html
@@ -21,12 +21,12 @@
             <meta name="description" content="">
             <meta name="viewport" content="width=device-width, initial-scale=1">
         </head>
-        <body style="background-color: lightblue;">
+        <body style="background-color: lightblue; height:100vh;">
             <header id="home" class="header">
                 <!--navegation-->
                 <div class ="nav-container">
                     <div class="produtos" style="color: palevioletred;">
-                        <a href="/sindex.html" class="nav-link"><i class='bx bx-closet bx-lg'></i></box-icon></a>
+                        <a href="/index.html" class="nav-link"><i class='bx bx-closet bx-lg'></i></box-icon></a>
                     </div>
             
                     <div class="logo">
@@ -42,7 +42,7 @@
             </header>
 
 
-            <div class="product" style="margin-top:250px; display:flex; flex-direction: column;">
+            <div class="product car" style="margin-top:250px; display:flex; flex-direction: column;">
 				<h3 class="">Se cadastre conosco para recerber e-mail soobre como tirar medidas e formas de pagamento</h3>
 				<form id="client_form" style="margin-top:10px ;margin:auto" class="cadastrar">
 					<div class="row">
@@ -91,7 +91,7 @@
 						/>
 					</div>
                     <div class="row">
-						<label for="email">e-mail*</label>
+						<label for="email">email*</label>
 						<input
 							type="text"
 							id="email"
@@ -99,7 +99,7 @@
 							placeholder="email"
 						/>
 					<div class="row">
-					<a  href="/src/pages/cart.html"><input class="cadastrar btn" type="submit" value="Cadastrar" style="margin: 20px;" /></a>
+					<a  href="/index.html"><input class="cadastrar btn" type="submit" value="Cadastrar" style="margin: 20px;" /></a>
 
 					</div>
 				</form>
